# minimal-configclasses

./: README.md  minimal_configclasses.py  pyproject.toml  requirements-dev.txt
example/: example.py  pyproject.toml
tests/: test_configclass.py  test_env_var_loader.py  test_loaders.py  test_resolvers.py  test_simple_configclass.py  test_toml_file_loader.py  utils.py
