[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "minimal-configclasses"
version = "1.0.0"
description = "Minimal library for turning a data class into a config class with TOML config file and environment variable resolution."
readme = "README.md"
authors = [{ name = "Jay Qi", email = "jayqi.opensource@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["config", "dataclasses"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dependencies = [
    "tomli ; python_version < '3.11'",
    "typing-extensions ; python_version < '3.10'",
]


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 99
select = [
    "E", # Pyflakes
    "F", # Pycodestyle
    "I", # isort
]
src = ["minimal_configclasses", "tests"]
exclude = ["tests/assets"]
unfixable = ["F"]

[tool.ruff.isort]
known-first-party = ["minimal_configclasses"]
force-sort-within-sections = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=minimal_configclasses --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["minimal_configclasses"]

[tool.jay]
foo = "bar"
